--- a/index.html
+++ b/index.html
@@ -46,167 +46,8 @@
 
 <!-- Added header and class header -->
 <header>
-    <div class="header">
-<div class="message">
-            </div>
-    <div class="main_container">
-          <div class="book_club_title">
-            <h1>Mayu ブッククラブ</h1>
-        </div>
-         <div class="book_club_about">
-           <h2>  〜Mayu ブッククラブとは？〜 </h2>
-           <br>
-  </div>
-  <div class="book_club_desc">
-    Mayuがおすすめする本を課題図書として、月に２回メンバーと一緒に話し合いながら感想を共有する有料クラブです。<br>
-    <br>
-    普段本を読むことを習慣にしていても、気軽にアウトプットしたり交流したりする場所が少ないと思い、このブッククラブを立ち上げました。<br>
-    <br>
-    同じ本でも、読む人の経験や知識、感性によって解釈はさまざまです。ブッククラブメンバーの感想を聞くことで、あらたな視点を発見できます。<br>
-    <br>
-  </div>
-</div>
-</div>
-</div>
-</header>
-<!-- End of header -->
-
-<!-- Added section and content class -->
-<section>
-    <div class="content">
-      <div class="info">
-        <div class="book_club_audiences">
-          <h2> Mayuブッククラブは、こんな方におすすめです。</h2>
-        <p>
-          <ul>
-            <li><small>
-              Mayuが普段読んでいる本を読んでみたい.</li>
-            <li>アウトプットをしながら内容の理解を深めたい.</li>
-            <li>読書好きな人たちと交流したい.</li></small>
-          </ul>
-        </p>
-        <a href="#" class="info-btn-center">More Info</a>
-      </div>
-    </div>
-  </section>
-<!-- End of section and content div -->
-
-<!-- Added page and section class -->
-    <div class="page">
-        <div class="section">
-          <img src="img/display-1.jpg" alt="image-2" style="width:100%">
-          <div class="book_club_message">
-            <p>
-            ぜひブッククラブでお会いしましょう。
-          </p>
-          </div>
-          <div class="book_club_dates">
-            <p>
-            【日時】<br>
-            月に2回、毎週土曜の14時〜16時 <br>
-            対面の場合は、都内に来れる方 <br>
-          </p>
-          </div>
-        </div>
-        <div class="section">
-          <img src="img/display-2.jpg" alt="image-2" style="width:100%">
-          <div class="book_club_details">
-            <p>
-            【内容】<br>
-        前半の1時間：課題図書の説明と感想のシェア <br>
-        後半の1時間：Mayuやブッククラブメンバーが他に読んでる本、ジャンルについてシェア <br>
-      </p>
-          </div>
-        </div>
-        <div class="section">
-          <img src="img/display-3.jpg" alt="image-2" style="width:100%">
-          <div class="book_club_rates">
-            <p>
-            【料金】<br>
-            対面：毎月1万円 × 3ヶ月継続 <br>
-        　　  ※限定20名 <br>
-            ZOOM：月3,000円　出入り自由 <br>
-        　　　人数制限なし <br>
-     
-      <div class="dashboard">
-        <a href="dashboard">ダッシュボードにログイン</a>
-      </div>
-    </p>
-
-      </div>
-    </div>
-</div>
-
-<!-- end of page and section -->
-
-<!-- Added footer -->
-    <div class="footer">
-        <div class="social">
-          <a href="#"><i class="fa fa-instagram"></i></a>
-          <a href="#"><i class="fa fa-youtube"></i></a>
-          <a href="#"><i class="fa fa-twitter"></i></a>
-          <a href="#"><i class="fa fa-facebook"></i></a>
-        </div>
-        <ul class="list-inline">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-        </ul>
-        <small><p> 2021&copy;mayu</p></small>
-</div>   
-<!-- End of footer -->
-</body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="robots" content="noindex" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Book Club</title>
-</head>
-<body>
-    <div class="navigation_container">
-        <div class="logo">
-            <a href="/">
-                Mayu's Website
-            </a>
-        </div>
-
-        <div class="menu">
-            <ul class="menu_list">
-                <li><a href="/book_club"><i class="fa fa-bookmark-o"></i>Book Club</a></li>
-                <li><a href="/shop/cart"><i class="fa fa-cart-plus"></i>Cart
-                            </a></li>
-                <div id="userManagement">
-                    <li>Welcome Guest</li>
-                    <div class="dropdown">
-         <div class="dropdownMargin">
-           <a href="/login">Log in</a>
-         </div>
-         
-         <div class="dropdownMargin">
-           <a href="/register">Register</a>
-         </div>    
-                    </div>
-                </div>
-            </ul>
-        </div>
-    </div>   
-
-<!-- Added header and class header -->
-<header>
-    <div class="header">
+    <div class="header" style="margin-left: 3%;
+    margin-right: 3%; margin-bottom: 30px;">
 <div class="message">
             </div>
     <div class="main_container">
